Refactor code structure and remove redundant sections for improved readability and maintainability

--- a/public/about.html
+++ b/public/about.html
@@ -200,6 +200,33 @@
         </div>
     </section>
 
+    <!-- Campus Photos -->
+    <section class="photo-gallery">
+        <div class="container">
+            <div class="section-header">
+                <h2>Life at On The Mountain</h2>
+                <p>See where transformation happens</p>
+            </div>
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.04.59_54190092.jpg" alt="Campus grounds">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.00_fba81bad.jpg" alt="Outdoor area">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.03_4171253a.jpg" alt="Outdoor space">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.07_9ca96580.jpg" alt="Retreat center">
+                </div>
+            </div>
+            <div style="text-align: center; margin-top: 2rem;">
+                <a href="facilities.html" class="btn btn-outline">Explore Our Facilities</a>
+            </div>
+        </div>
+    </section>
+
     <!-- Accreditation -->
     <section class="cta-section" style="background: linear-gradient(135deg, #1e3a4c 0%, #1a3a3a 100%);">
         <div class="container">
