--- a/public/index.html
+++ b/public/index.html
@@ -221,6 +221,33 @@
         </div>
     </section>
 
+    <!-- Campus Gallery Preview -->
+    <section class="photo-gallery" style="background-color: #f5f5f5;">
+        <div class="container">
+            <div class="section-header">
+                <h2>Our Campus Environment</h2>
+                <p>Experience ministry training in a beautiful mountain retreat setting</p>
+            </div>
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.04.57_a21f1b9d.jpg" alt="Campus facility view">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.02_e17af9ed.jpg" alt="Campus landscape">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.05_a65822be.jpg" alt="Campus facilities">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.06_5b30879a.jpg" alt="Mountain retreat">
+                </div>
+            </div>
+            <div style="text-align: center; margin-top: 2rem;">
+                <a href="facilities.html" class="btn btn-outline">View All Campus Photos</a>
+            </div>
+        </div>
+    </section>
+
     <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
