--- a/public/facilities.html
+++ b/public/facilities.html
@@ -327,6 +327,54 @@
         </div>
     </section>
 
+    <!-- Photo Gallery -->
+    <section class="photo-gallery">
+        <div class="container">
+            <div class="section-header">
+                <h2>Campus Photo Gallery</h2>
+                <p>Take a visual tour of our mountain retreat campus</p>
+            </div>
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.04.57_a21f1b9d.jpg" alt="Campus facility view">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.04.59_54190092.jpg" alt="Campus grounds">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.00_fba81bad.jpg" alt="Outdoor area">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.01_c6a401dc.jpg" alt="Campus building">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.02_c27ffc9a.jpg" alt="Facilities view">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.02_e17af9ed.jpg" alt="Campus landscape">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.03_4171253a.jpg" alt="Outdoor space">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.04_fc41f57e.jpg" alt="Campus area">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.05_a65822be.jpg" alt="Campus facilities">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.06_5b30879a.jpg" alt="Mountain retreat">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.07_551fd4c3.jpg" alt="Campus environment">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.07_9ca96580.jpg" alt="Retreat center">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
