Update image references in about, facilities, and index pages for consistency and clarity

--- a/public/about.html
+++ b/public/about.html
@@ -209,16 +209,16 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.04.59_54190092.jpg" alt="Campus grounds">
+                    <img src="images/facilities-2.jpg" alt="Campus grounds">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.00_fba81bad.jpg" alt="Outdoor area">
+                    <img src="images/facilities-3.jpg" alt="Outdoor area">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.03_4171253a.jpg" alt="Outdoor space">
+                    <img src="images/facilities-7.jpg" alt="Outdoor space">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.07_9ca96580.jpg" alt="Retreat center">
+                    <img src="images/facilities-11.jpg" alt="Retreat center">
                 </div>
             </div>
             <div style="text-align: center; margin-top: 2rem;">
