--- a/public/facilities.html
+++ b/public/facilities.html
@@ -336,40 +336,37 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.04.57_a21f1b9d.jpg" alt="Campus facility view">
+                    <img src="images/facilities-1.jpg" alt="Campus facility view">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.04.59_54190092.jpg" alt="Campus grounds">
+                    <img src="images/facilities-2.jpg" alt="Campus grounds">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.00_fba81bad.jpg" alt="Outdoor area">
+                    <img src="images/facilities-3.jpg" alt="Outdoor learning area">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.01_c6a401dc.jpg" alt="Campus building">
+                    <img src="images/facilities-4.jpg" alt="Campus building">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.02_c27ffc9a.jpg" alt="Facilities view">
+                    <img src="images/facilities-5.jpg" alt="Facilities and amenities">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.02_e17af9ed.jpg" alt="Campus landscape">
+                    <img src="images/facilities-6.jpg" alt="Campus landscape">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.03_4171253a.jpg" alt="Outdoor space">
+                    <img src="images/facilities-7.jpg" alt="Outdoor space">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.04_fc41f57e.jpg" alt="Campus area">
+                    <img src="images/facilities-8.jpg" alt="Campus area">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.05_a65822be.jpg" alt="Campus facilities">
+                    <img src="images/facilities-9.jpg" alt="Campus facilities">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.06_5b30879a.jpg" alt="Mountain retreat">
+                    <img src="images/facilities-10.jpg" alt="Mountain retreat center">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.07_551fd4c3.jpg" alt="Campus environment">
-                </div>
-                <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.07_9ca96580.jpg" alt="Retreat center">
+                    <img src="images/facilities-11.jpg" alt="Campus environment">
                 </div>
             </div>
         </div>
