--- a/public/index.html
+++ b/public/index.html
@@ -230,16 +230,16 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.04.57_a21f1b9d.jpg" alt="Campus facility view">
+                    <img src="images/facilities-1.jpg" alt="Campus facility view">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.02_e17af9ed.jpg" alt="Campus landscape">
+                    <img src="images/facilities-6.jpg" alt="Campus landscape">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.05_a65822be.jpg" alt="Campus facilities">
+                    <img src="images/facilities-9.jpg" alt="Campus facilities">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/WhatsApp Image 2025-11-01 at 18.05.06_5b30879a.jpg" alt="Mountain retreat">
+                    <img src="images/facilities-10.jpg" alt="Mountain retreat">
                 </div>
             </div>
             <div style="text-align: center; margin-top: 2rem;">
