--- a/public/facilities.html
+++ b/public/facilities.html
@@ -54,7 +54,7 @@
                     <p>Our campus combines the simplicity of outdoor camping with modern educational facilities, creating a unique space where students can encounter God, engage with scripture, and be equipped for ministry in an atmosphere of peace and focus.</p>
                 </div>
                 <div class="about-image">
-                    <img src="ministryadvert3.jpg" alt="Mountain Campus">
+                    <img src="../public/images/facilities-8.jpg" alt="Mountain Campus">
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-image">
-                    <img src="ministryadvert.jpg" alt="Accommodation">
+                    <img src="../public/images/facilities-4.jpgg" alt="Accommodation">
                 </div>
                 <div class="about-text">
                     <h2>Accommodation Options</h2>
@@ -241,7 +241,7 @@
                     <p><strong>Note:</strong> Please indicate any dietary requirements on your enrollment application so we can adequately prepare for your needs.</p>
                 </div>
                 <div class="about-image">
-                    <img src="ministryadvert2.jpg" alt="Community Dining">
+                    <img src="../public/images/facilities-4.jpg" alt="Community Dining">
                 </div>
             </div>
         </div>
