--- a/public/facilities.html
+++ b/public/facilities.html
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-image">
-                    <img src="../public/images/facilities-4.jpgg" alt="Accommodation">
+                    <img src="../public/images/facilities-5.jpg" alt="Accommodation">
                 </div>
                 <div class="about-text">
                     <h2>Accommodation Options</h2>
