--- a/public/facilities.html
+++ b/public/facilities.html
@@ -300,10 +300,41 @@
         <div class="container">
             <div class="section-header">
                 <h2>Location & Getting Here</h2>
-                <p>Detailed directions will be provided upon enrollment</p>
+                <p>Visit us in the beautiful Limpopo province</p>
             </div>
             <div style="max-width: 800px; margin: 0 auto; text-align: center;">
-                <p>Our mountain retreat campus is located in a peaceful area of South Africa, easily accessible by car. Detailed directions, GPS coordinates, and transportation options will be provided to all enrolled students prior to their first contact session.</p>
+                <div style="background-color: #f9fff4; padding: 2rem; border-radius: 12px; border-left: 4px solid #7AB539; margin-bottom: 2rem;">
+                    <h3 style="color: #1e3a4c; margin-bottom: 1rem;">Our Address</h3>
+                    <p style="font-size: 1.1rem; color: #333; line-height: 1.8;">
+                        <strong>On The Mountain Revival Centre</strong><br>
+                        Farm 20, R101<br>
+                        Bela Bela, Limpopo, 0480<br>
+                        South Africa
+                    </p>
+                </div>
+                <p>Our mountain retreat campus is located in the peaceful area of Bela Bela, Limpopo, easily accessible by car. Detailed directions, GPS coordinates, and transportation options will be provided to all enrolled students prior to their first contact session.</p>
+                
+                <!-- Google Maps Embed -->
+                <div style="margin: 3rem 0;">
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3624.5!2d28.3!3d-24.9!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDU0JzAwLjAiUyAyOMKwMTgnMDAuMCJF!5e0!3m2!1sen!2sza!4v1234567890!5m2!1sen!2sza&q=Farm+20+R101+Bela+Bela+Limpopo+0480"
+                        width="100%" 
+                        height="400" 
+                        style="border: 0; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                    <div style="margin-top: 1.5rem;">
+                        <a href="https://www.google.com/maps/dir//Farm+20+R101+Bela+Bela+Limpopo+0480" 
+                           target="_blank" 
+                           rel="noopener noreferrer"
+                           style="display: inline-block; padding: 1rem 2rem; background-color: #7AB539; color: white; text-decoration: none; border-radius: 8px; font-weight: 600; transition: background-color 0.3s;">
+                            Get Directions on Google Maps
+                        </a>
+                    </div>
+                </div>
+
                 <p style="margin-top: 2rem;"><strong>Need directions?</strong> Contact us for specific location details and travel assistance.</p>
 
                 <div style="margin-top: 3rem; padding: 2rem; background-color: #f9fff4; border-radius: 12px;">
@@ -416,14 +447,40 @@
                 </div>
                 <div class="footer-col">
                     <h4>Contact</h4>
-                    <ul>
-                        <li>Pieter Trollip</li>
-                        <li><a href="tel:+27621242113">+27 62 124 2113</a></li>
-                        <li><a href="mailto:pieter@mountainrevivalcentre.co.za">pieter@mountainrevivalcentre.co.za</a></li>
-                        <li class="accreditation">Accreditation: SDP070223070938</li>
-                    </ul>
+                    <p style="margin: 0.25rem 0;">Pieter Trollip</p>
+                    <p style="margin: 0.25rem 0;"><a href="tel:+27621242113">+27 62 124 2113</a></p>
+                    <p style="margin: 0.25rem 0;"><a href="mailto:pieter@mountainrevivalcentre.co.za">pieter@mountainrevivalcentre.co.za</a></p>
+                    <p style="margin: 1rem 0 0.25rem 0;">Farm 20, R101<br>Bela Bela, Limpopo, 0480</p>
+                    <p class="accreditation" style="margin: 0.25rem 0;">Accreditation: SDP070223070938</p>
+                </div>
+
+                <div class="footer-col">
+                    <!-- Map Section -->
+                    <div style="margin-top: 3rem; padding-top: 3rem; border-top: 1px solid rgba(255,255,255,0.1);">
+                        <h4 style="text-align: center; margin-bottom: 2rem; color: white;">Find Us</h4>
+                        <div style="margin-bottom: 1.5rem;">
+                            <iframe 
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3624.5!2d28.3!3d-24.9!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDU0JzAwLjAiUyAyOMKwMTgnMDAuMCJF!5e0!3m2!1sen!2sza!4v1234567890!5m2!1sen!2sza&q=Farm+20+R101+Bela+Bela+Limpopo+0480"
+                                width="100%" 
+                                height="250" 
+                                style="border: 0; border-radius: 8px;" 
+                                allowfullscreen="" 
+                                loading="lazy" 
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
+                        </div>
+                        <div style="text-align: center;">
+                            <a href="https://www.google.com/maps/dir//Farm+20+R101+Bela+Bela+Limpopo+0480" 
+                            target="_blank" 
+                            rel="noopener noreferrer"
+                            style="display: inline-block; padding: 0.75rem 1.5rem; background-color: #7AB539; color: white; text-decoration: none; border-radius: 6px; font-weight: 600; transition: background-color 0.3s;">
+                                Get Directions
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
+
             <div class="footer-bottom">
                 <p>&copy; 2025 On The Mountain Revival Centre. All rights reserved.</p>
                 <p>SAQA Accredited | ACRP Registered | NQF Level 5</p>
